# webapp-cattongue

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  memo.txt
assets/: main.css
patched/dioxus-fullstack-0.7.2/: .cargo_vcs_info.json  Cargo.toml
patched/dioxus-fullstack-0.7.2/src/: client.rs
resources/: fav_to_ico.sh
resources/android/assets/: index.html
resources/android/res/drawable/: fav.xml
scripts/: android-webview-assets-params.toml  android-webview-params.toml
src/: backend.rs  main.rs
src/backends/: db_main.rs  db_session.rs  mod.rs
src/components/: info.rs  loading.rs  mod.rs  navbar.rs  pagenotfound.rs  version.rs
src/views/: catview.rs  favorites.rs  mod.rs
