[package]
name = "cattongue"
version = "0.1.0"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
This is a modified version of the Dioxus sample hot_dog.
"""
keywords = ["webapp"]
categories = ["desktop", "android"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
rust-version = "1.90.0"
repository = "https://github.com/aki-akaguma/webapp-cattongue"


[package.metadata.patch]
crates = ["dioxus-fullstack"]

[patch.crates-io]
dioxus-fullstack = { path = "./patched/dioxus-fullstack-0.7.2" }

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
dioxus-fullstack = "0.7.2"

anyhow = { version = "1.0" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

rusqlite = { version = "0.37", optional = true }
async-std = { version = "*", optional = true }

const-css-minify = { version="1.0", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
rust-version-info-file = "0.2"
regex = "1.12"


[features]
default = []

web = ["dioxus/web"]
desktop = ["dioxus/desktop", "backend_homedir"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "database"]

database = ["dep:rusqlite"]

backend_delay = ["async-std"]
backend_homedir = ["database"]
backend_text = []

debian_build = ["inline_style"]
inline_style = ["dep:const-css-minify"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[package.metadata.deb]
features = ["debian_build"]
section = "AAA-webapp"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program is a modified hot_dog of Dioxus sample.
"""
depends = "$auto"
separate-debug-symbols = true

assets = [
    ["target/release/cat_tongue", "usr/bin/cat-tongue", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/cat-tongue/", "644"],
    ["README.md", "usr/share/doc/cat-tongue/", "644"],
]
