[package]
name = "cattongue"
version = "0.1.3"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
This is a modified version of the Dioxus sample hot_dog.
"""
keywords = ["webapp"]
categories = ["desktop", "android"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
rust-version = "1.90.0"
repository = "https://github.com/aki-akaguma/webapp-cattongue"


[package.metadata.patch]
crates = ["dioxus-fullstack"]

[patch.crates-io]
dioxus-fullstack = { path = "./patched/dioxus-fullstack-0.7.2" }

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
dioxus-fullstack = "0.7.2"
dioxus-desktop = { version = "0.7.2", optional = true }
dioxus-logger = "0.7.2"

tower-sessions = { version = "0.14", optional = true }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"], optional = true }

#browserinfocm = { path = "../browserinfocm", default-features = false }
#browserinfocm = { git = "https://github.com/aki-akaguma/browserinfocm.git" }
browserinfocm = "0.1.11"

anyhow = { version = "1.0" }
console_error_panic_hook = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

const-css-minify = { version="1.0", optional = true }

async-sleep-aki = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
rust-version-info-file = "0.2"


[features]
default = []

web = ["dioxus/web", "browserinfocm/web"]
desktop = ["dioxus/desktop", "browserinfocm/desktop", "dep:dioxus-desktop"]
mobile = ["dioxus/mobile", "browserinfocm/mobile"]
server = ["dioxus/server", "browserinfocm/server", "database"]

database = ["dep:sqlx","dep:tower-sessions-sqlx-store","dep:tower-sessions"]

backend_delay = []
backend_homedir = ["database"]
backend_text = []

debian_build = ["inline_style"]
inline_style = ["dep:const-css-minify"]


[package.metadata.deb]
features = ["debian_build"]
section = "AAA-webapp"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program is a modified hot_dog of Dioxus sample.
"""
depends = "$auto"
separate-debug-symbols = true

assets = [
    ["target/release/cat_tongue", "usr/bin/cat-tongue", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/cat-tongue/", "644"],
    ["README.md", "usr/share/doc/cat-tongue/", "644"],
]
